[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/playerSprites/SpaceShipBlue.atlastex" type="Texture" id=1]
[ext_resource path="res://assets/playerSprites/SpaceShipRed.atlastex" type="Texture" id=2]
[ext_resource path="res://assets/background/Nebula Blue.png" type="Texture" id=3]
[ext_resource path="res://shaders/scrollBg.tres" type="Material" id=4]
[ext_resource path="res://scripts/PlayerSelection.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/highland-gothic/HighlandGothicFLF-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/UI/b_6.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/Window.png" type="Texture" id=8]
[ext_resource path="res://assets/UI/b_7.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/airstrike/airstrike3d.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 10 )

[node name="PlayerSelection" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Bg" type="TextureRect" parent="."]
material = ExtResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3456.0
margin_bottom = 3736.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="Container" type="TextureRect" parent="."]
margin_left = 231.0
margin_top = 56.0
margin_right = 1171.0
margin_bottom = 1456.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="PlayerBlue" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.8
margin_top = -66.4
margin_right = 56.2
margin_bottom = 107.6
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 49, 87 )
texture = ExtResource( 1 )

[node name="PlayerRed" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.8
margin_top = -66.4
margin_right = 56.2
margin_bottom = 107.6
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 49, 87 )
texture = ExtResource( 2 )

[node name="TitleLbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 624.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LeftBtn" type="TextureButton" parent="."]
use_parent_material = true
margin_left = 248.0
margin_top = 199.0
margin_right = 481.0
margin_bottom = 494.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 7 )

[node name="RightBtn" type="TextureButton" parent="."]
margin_left = 378.0
margin_top = 198.0
margin_right = 611.0
margin_bottom = 493.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 9 )

[node name="Title" type="Label" parent="."]
margin_left = 255.0
margin_top = 63.0
margin_right = 390.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 2 )
text = "Spaceship"
align = 1
valign = 1

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
